# fredfix

./: .gitignore  pyproject.toml
.devcontainer/.devcontainer/: devcontainer.json
ai/: ask_agent.py  model_batch.py  model_generator.py
cli/: main.py
dashboard_web/: app.py  dashboard.py
monitoring/: dashboard.py  disk_monitor.py  memory_monitor.py  monitors.py
scripts/: check_envs.py  fix_zshrc.py  fredfix_ai.py  model_prompts.py  self_healer.py
utils/: backup.py  helpers.py
